tests/semantic/pass/selection_statement_block_scope3.c
int main(void) {
  int a;
  if(0) {
    int a;
  } else {
    int b;
  }
  return a;
}
