tests/semantic/fail/function_pointer_substraction.c
int main(void) {
  if (&main - &main) {
    return 0;
  }
  return 0;
}
